// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc sayHelloAgain (HelloRequest) returns (HelloReply) {}
  rpc IngestData(SensorData) returns (ServerReply){}
  rpc sendSequenceNumber (sequenceNumberReq) returns (sequenceNumberReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}


//sequenceNumberReq
message sequenceNumberReq{
  string sequenceNumber=1;
}

//sequenceNumberReply
message sequenceNumberReply {
  string sequenceNumberMessage = 1;
}


message SensorData {
    int32 Seq = 1;
    string PatchId =2;
    repeated int32 ECG0=3;
    repeated int32 ECG1=4;
    repeated int32 Accel=5;
    repeated int32 Respiration=6;
    int32 vBat=7;
    int32 IAGain=8;
    int32 LeadStatus=9;
    int32 RLDInformation=10;
    int32 Temperature=11;
    int32 TsECG=12;

}

message ServerReply {
  string servermsg =1;

}